# dataflow-scheduler

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: clang-format.cmake
include/dataflow-scheduler-c/: RegisterEverything.h
include/dataflow-scheduler/Analysis/: MemoryTrackerAnalysis.h
include/dataflow-scheduler/Analysis/ArchViews/: MemoryTree.h  RoutingGraph.h
include/dataflow-scheduler/Conversion/backend/ScheduleIRToDFIR/: Passes.td
include/dataflow-scheduler/Conversion/backend/ScheduleIRToDFIR/KTDFLowToDFIR/: DataTransferLowering.h  LinalgLowering.h  Utils.h
include/dataflow-scheduler/Conversion/backend/ScheduleIRToDFIR/KTDFToKTDFLow/: SignalInsertion.h
include/dataflow-scheduler/Dialect/KTDF/Analysis/: GlobalStageDAG.h  StageGrouping.h
include/dataflow-scheduler/Dialect/KTDF/Transforms/StageCoarsening/: BufferExpansion.h
include/dataflow-scheduler/Transforms/: Passes.h  Passes.td
include/dataflow-scheduler/Transforms/PathExpansion/: Materializer.h  Planner.h
lib/: CMakeLists.txt  Pipeline.cpp  RegisterEverything.cpp
lib/Analysis/: MemoryTrackerAnalysis.cpp
lib/Analysis/ArchViews/: MemoryTree.cpp  RoutingGraph.cpp
lib/CAPI/: CMakeLists.txt  RegisterEverything.cpp
lib/Conversion/Utils/: Utils.cpp
lib/Conversion/backend/ScheduleIRToDFIR/KTDFLowToDFIR/: BufferPhaseLowering.cpp  DataTransferLowering.cpp  KTDFLowToDFIR.cpp  LinalgLowering.cpp  LogicalMemoryViewBuilder.cpp  OperationLowerings.cpp  ParallelLowering.cpp  ProgramUnitBuilder.cpp  QueryMapArithCollapse.cpp  Utils.cpp
lib/Conversion/backend/ScheduleIRToDFIR/KTDFToKTDFLow/: ComponentClassifier.cpp  KTDFToKTDFLow.cpp  PipelineExecutionTransform.cpp  ScratchpadConflicts.cpp  SignalInsertion.cpp  UniformInfra.cpp  UnitMaterializer.cpp  UnitSSACollection.cpp
lib/Conversion/backend/ScheduleIRToDFIR/SplitDFIROutput/: SplitDFIROutput.cpp
lib/Conversion/frontend/KTIRToScheduleIR/: ComputeGroupExtraction.cpp  ConstructThreeStagePipeline.cpp  KTIRLegalityCheck.cpp
lib/Dialect/KTDF/Analysis/: CMakeLists.txt  GlobalStageDAG.cpp  LoopTiling.cpp  Reuse.cpp  StageGrouping.cpp
lib/Dialect/KTDF/Transforms/: BroadcastPromotion.cpp  StageCoarsening.cpp  SubsumeLinearizeIndex.cpp  TileSizeSelection.cpp
lib/Dialect/KTDF/Transforms/StageCoarsening/: BufferExpansion.cpp  Materializer.cpp  ScopeCorrection.cpp
lib/Transforms/: AddressAssignment.cpp  AffineMinCanonicalization.cpp  CMakeLists.txt  DoubleBuffering.cpp  EnsureDeviceDeclaration.cpp  NormalizeGridTo1D.cpp  NormalizeSCFForLoops.cpp  ParallelizeLoopsAcrossInstances.cpp  PathExpansion.cpp  ScalarBroadcastLegalization.cpp  StripMineSCFForLoops.cpp  TileSCFForLoops.cpp
lib/Transforms/PathExpansion/: Materializer.cpp  Planner.cpp
lib/Transforms/Utils/: PipelineTreeLegalizer.cpp  RegionClonePrune.cpp  SCFTilingUtils.cpp  Utils.cpp
lib/Utils/: SchedulerExtContext.cpp
python/: CMakeLists.txt  DataflowSchedulerModule.cpp
python/mlir_scheduler/: CMakeLists.txt
scripts/: test_update_filecheck.sh
test/: CMakeLists.txt
test/Conversion/backend/ScheduleIRToDFIR/KTDFLowToDFIR/: load_set_error.mlir
test/Conversion/backend/ScheduleIRToDFIR/KTDFToKTDFLow/: parallel-units.mlir
test/Conversion/backend/ScheduleIRToDFIR/SplitDFIROutput/: split_dfir_basic.mlir
test/Conversion/frontend/KTIRToScheduleIR/ComputeGroupExtraction/: basic.mlir  imperfectly_nested_loops.mlir  iter_arg_dependencies.mlir  loops.mlir  nested_loops.mlir
test/Transforms/DoubleBuffering/: debug-log.mlir  idempotent.mlir  negative-alloc-multi-use.mlir  negative-dynamic-size-not-dominating.mlir  negative-ineligible-memory-space.mlir  negative-multi-producer.mlir  negative-no-scope.mlir  negative-non-alloc-defining-op.mlir  negative-pre-existing-modulo.mlir  negative-producer-equals-consumer.mlir
test/Transforms/EnsureDeviceDeclaration/: basic.mlir  device-manager.mlir  device-name-inference.mlir  device-name.mlir  invalid.mlir
test/Transforms/EnsureDeviceDeclaration/Inputs/: multiple-devices.mlir  no-device.mlir  not-mlir.mlir
test/Transforms/NormalizeSCFForLoops/: test.mlir
test/Transforms/ParallelizeLoopsAcrossInstances/: debug-balanced-candidate.mlir  debug-imbalanced-fallback.mlir
test/Transforms/PathExpansion/: basic.mlir  partial_expansion.mlir
test/Transforms/StageCoarsening/: unequal-sizes-memref-shape-after-coarsening-bug.mlir
test/dataflow-scheduler-opt/: emit-dfir-pipeline.mlir
test/python/: register_everything.py
tools/dataflow-scheduler-opt/: CMakeLists.txt  dataflow-scheduler-opt.cpp
